--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     </header>
     <h2>Why Creators Love Marico</h2>
-    <h4><img src="../Aesop/images/Smile_emoji.png">Reduced Anxiety</h4>
-    <h4><img src="../Aesop/images/Happy_emoji.png">Lower Workload</h4>
-    <h4><img src="../Aesop/images/Party_emoji.png">More Time</h4>
+    <h4><img src="images/Smile_emoji.png">Reduced Anxiety</h4>
+    <h4><img src="images/Happy_emoji.png">Lower Workload</h4>
+    <h4><img src="images/Party_emoji.png">More Time</h4>
     <p class="pr_3">Never worry about losing your audience.</p>
     <p class="pr_3">Just share one link. We'll handle the rest.</p>
     <p class="pr_3">Spend less time on marketing tools</p>
