--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="btn_2" href="#">Get Started Now</button>
             <button class="btn_2" href="#">View A Demo</button>
         </div>
-        <img src="../Aesop/images/Dot.png" class="dot">
+        <img src="images/Dot.png" class="dot">
         <p class="p_2">1000+</p>
         <p class="p_3">creators have already started</p>
 
@@ -48,8 +48,8 @@
         <p class="white_1">  Your Content.</p>
         <p class="white_2">All in</p>
         <p class="blue">One Spot</p>
-        <p class="option"> <img src="../Aesop/images/Bullet.png" class="bullet"> Bring all of your content together into one homepage.</p>
-        <p class="option"> <img src='../Aesop/images/Bullet-2.png'class='bullet'>Your page automatically updates whenever you create.</p>
+        <p class="option"> <img src="images/Bullet.png" class="bullet"> Bring all of your content together into one homepage.</p>
+        <p class="option"> <img src='images/Bullet-2.png'class='bullet'>Your page automatically updates whenever you create.</p>
         <div class="btn_pull">
             <button class="btn_3" href="#">Get Started Now</button>
             <button class="btn_3" href="#">View A Demo</button>
@@ -63,7 +63,7 @@
         <p class="green">One Link</p>
         <p class="gray">ALL You Create.</p>
         <p class="wh">One Link</p>
-        <img src="../Aesop/images/Mobile.png" class="mobile">
+        <img src="images/Mobile.png" class="mobile">
     </div>
     <div class="right">
         <p class="green">Collect Subscribers</p>
@@ -85,32 +85,32 @@
         <p class="white_1">  Reach Your</p>
         <p class="white_2">Audience</p>
         <p class="blue">Directly.</p>
-        <p class="option"> <img src="../Aesop/images/Bullet.png" class="bullet"> Embed content or create something new to share.</p>
-        <p class="option"> <img src='../Aesop/images/Bullet-2.png'class='bullet'>Share content over email, text message or your homepage.</p>
+        <p class="option"> <img src="images/Bullet.png" class="bullet"> Embed content or create something new to share.</p>
+        <p class="option"> <img src='images/Bullet-2.png'class='bullet'>Share content over email, text message or your homepage.</p>
         <div class="btn_pull">
             <button class="btn_3" href="#">Get Started Now</button>
             <button class="btn_3" href="#">View A Demo</button>
         </div>
     </div>
         <h2>Experts Agree</h2>
-        <img src="../Aesop/images/Image_2.png" class="image_2">
+        <img src="images/Image_2.png" class="image_2">
         <div class="meg">
             <h2>We've helped over 1,000 creatorsre
                 claim control of their audience.</h2>
         </div>
         <div class="end">
-            <img src="../Aesop/images/logo.png" class="end_logo">
+            <img src="images/logo.png" class="end_logo">
             <h3>Get Started Now</h3>
             <p class="p_5">Setup is easy and takes under 5 minutes.</p>
             <div class="btn">
             <button class="btn_4" href="#">Get Started Now</button>
         </div>
-            <img src="../Aesop/images/Dot.png" class="dot">
+            <img src="images/Dot.png" class="dot">
             <p class="p_2">1000+</p>
             <p class="p_3">creators have already started</p>
         </div>
         <footer class="footer">
-            <img src="../Aesop/images/logo.png" class="footer_logo">
+            <img src="images/logo.png" class="footer_logo">
             <p class="logo_footer">Marico</p>
             <nav class="nav_footer">
                 <ul class="ul_footer">
