--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body class="body">
     <header class="header">
-        <img src="../Aesop/images/logo.png">
+        <img src="images/logo.png">
         <h1 class="logotext">Marico</h1>
         <ul class="el_header">
             <li><a href='#'>Use Cases</a></li>
