--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
 <body class="body">
     <header class="header">
+        <div>
         <img src="images/logo.png">
         <h1 class="logotext">Marico</h1>
-        <ul class="el_header">
+        <ul class="ul_header" id="Myul">
             <li><a href='#'>Use Cases</a></li>
             <li><a href='#'>About</a></li>
             <li><a href='#'>Pricing</a></li>
@@ -18,6 +19,8 @@
         </ul>
         <a href="#"> Login </a>
         <btn class="btn_1" href="#" >Sign Up</btn>
+        <div>
+        </div>
         <h1 class="own">Own your audience.</h1>
         <h1 class="gradient">So you don't lose them.</h1>
         <p class="p_1">Turn your audience into email and text message subscribers.</p>
@@ -28,15 +31,23 @@
         <img src="images/Dot.png" class="dot">
         <p class="p_2">1000+</p>
         <p class="p_3">creators have already started</p>
-
+    </div>
     </header>
     <h2>Why Creators Love Marico</h2>
+    <div class="smile_text">
     <h4><img src="images/Smile_emoji.png">Reduced Anxiety</h4>
-    <h4><img src="images/Happy_emoji.png">Lower Workload</h4>
-    <h4><img src="images/Party_emoji.png">More Time</h4>
     <p class="pr_3">Never worry about losing your audience.</p>
+    </div>
+    <div class="smile_text">
+    <h4><img src="images/Happy_emoji.png">Lower Workload</h4>
     <p class="pr_3">Just share one link. We'll handle the rest.</p>
+</div>
+<div class="smile_text">
+    <h4><img src="images/Party_emoji.png">More Time</h4>
     <p class="pr_3">Spend less time on marketing tools</p>
+</div>
+
+    
     <h5>STEP 1</h5>
     <h2>Connect Your Content</h2>
     <p class="p_4">Bring all of your content together and get a Homepage that automatically updates whenever you create anywhere online.</p>
@@ -45,15 +56,16 @@
     </div>
     <div class="Step_1">
         <h6>Your Homepage</h6>
+        <img src="images/Image-4.png" class="images_4">
         <p class="white_1">  Your Content.</p>
         <p class="white_2">All in</p>
         <p class="blue">One Spot</p>
         <p class="option"> <img src="images/Bullet.png" class="bullet"> Bring all of your content together into one homepage.</p>
         <p class="option"> <img src='images/Bullet-2.png'class='bullet'>Your page automatically updates whenever you create.</p>
-        <div class="btn_pull">
-            <button class="btn_3" href="#">Get Started Now</button>
-            <button class="btn_3" href="#">View A Demo</button>
-        </div>
+    </div>
+    <div class="btn_pull">
+        <button class="btn_3" href="#">Get Started Now</button>
+        <button class="btn_3" href="#">View A Demo</button>
     </div>
     <h5>STEP 2</h5>
     <h2>Share Your Homepage</h2>
@@ -82,15 +94,16 @@
         your audience directly over email and text massage.</p>
         <div class="step_3">
         <h6>Create & Share</h6>
+        <img src="images/Image.png" class="images_0">
         <p class="white_1">  Reach Your</p>
         <p class="white_2">Audience</p>
         <p class="blue">Directly.</p>
         <p class="option"> <img src="images/Bullet.png" class="bullet"> Embed content or create something new to share.</p>
         <p class="option"> <img src='images/Bullet-2.png'class='bullet'>Share content over email, text message or your homepage.</p>
-        <div class="btn_pull">
-            <button class="btn_3" href="#">Get Started Now</button>
-            <button class="btn_3" href="#">View A Demo</button>
-        </div>
+    </div>
+    <div class="btn_pull">
+        <button class="btn_3" href="#">Get Started Now</button>
+        <button class="btn_3" href="#">View A Demo</button>
     </div>
         <h2>Experts Agree</h2>
         <img src="images/Image_2.png" class="image_2">
@@ -110,6 +123,7 @@
             <p class="p_3">creators have already started</p>
         </div>
         <footer class="footer">
+            <div>
             <img src="images/logo.png" class="footer_logo">
             <p class="logo_footer">Marico</p>
             <nav class="nav_footer">
@@ -121,6 +135,7 @@
                 </ul>
             </nav>
             <p class="grey_footer">info@marico.co</p>
+        </div>
         </footer>
 </body>
 </html>
