--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     </head>
 <body class="body">
     <header class="header">
+        <div class="header_inner">
         <div>
-        <img src="images/logo.png">
+            <div class="logo_div">
+        <img src="images/logo.png"class=logo_start>
         <h1 class="logotext">Marico</h1>
-        <ul class="ul_header" id="Myul">
+            </div>
+        <nav class="nav">
+        <ul class="ul_header">
             <li><a href='#'>Use Cases</a></li>
             <li><a href='#'>About</a></li>
             <li><a href='#'>Pricing</a></li>
             <li><a href='#'>Blog</a></li>
+            <a href="#" id="LOGIN"> Login </a>
+            <btn class="btn_1" id="SIGN" href="#" >Sign Up</btn>       
         </ul>
-        <a href="#"> Login </a>
-        <btn class="btn_1" href="#" >Sign Up</btn>
-        <div>
-        </div>
+    </nav>
+</div>
         <h1 class="own">Own your audience.</h1>
         <h1 class="gradient">So you don't lose them.</h1>
         <p class="p_1">Turn your audience into email and text message subscribers.</p>
@@ -35,19 +39,17 @@
     </header>
     <h2>Why Creators Love Marico</h2>
     <div class="smile_text">
-    <h4><img src="images/Smile_emoji.png">Reduced Anxiety</h4>
+    <h4><img src="images/Smile_emoji.png" class="smile">Reduced Anxiety</h4>
     <p class="pr_3">Never worry about losing your audience.</p>
     </div>
     <div class="smile_text">
-    <h4><img src="images/Happy_emoji.png">Lower Workload</h4>
+    <h4><img src="images/Happy_emoji.png" class="smile">Lower Workload</h4>
     <p class="pr_3">Just share one link. We'll handle the rest.</p>
 </div>
 <div class="smile_text">
-    <h4><img src="images/Party_emoji.png">More Time</h4>
+    <h4><img src="images/Party_emoji.png" class="smile">More Time</h4>
     <p class="pr_3">Spend less time on marketing tools</p>
 </div>
-
-    
     <h5>STEP 1</h5>
     <h2>Connect Your Content</h2>
     <p class="p_4">Bring all of your content together and get a Homepage that automatically updates whenever you create anywhere online.</p>
@@ -75,6 +77,7 @@
         <p class="green">One Link</p>
         <p class="gray">ALL You Create.</p>
         <p class="wh">One Link</p>
+        <div class="mobile_div"><img src="images/Mobile.png" class="mobile"> </div>
     </div>
     <div class="right">
         <p class="green">Collect Subscribers</p>
