--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href='#'>Pricing</a></li>
             <li><a href='#'>Blog</a></li>
             <a href="#" id="LOGIN"> Login </a>
-            <btn class="btn_1" id="SIGN" href="#" >Sign Up</btn>       
+            <btn class="btn_1" onclick="document.getElementById('id01').style.display='block'">Sign Up</btn>       
         </ul>
     </nav>
 
