--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>Marico</title>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     </head>
 <body class="body">
     <header class="header">
@@ -20,11 +21,10 @@
             <li><a href='#'>About</a></li>
             <li><a href='#'>Pricing</a></li>
             <li><a href='#'>Blog</a></li>
-            <a href="#" id="LOGIN"> Login </a>
-            <btn class="btn_1" onclick="document.getElementById('id01').style.display='block'">Sign Up</btn>       
+            <a href="#" id="LOGIN" class="login"> Login </a>
+            <btn class="btn_1" id="sign">Sign Up</btn>       
         </ul>
     </nav>
-
         <h1 class="own">Own your audience.</h1>
         <h1 class="gradient">So you don't lose them.</h1>
         <p class="p_1">Turn your audience into email and text message subscribers.</p>
